--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ annotated-types==0.7.0
 anyio==4.8.0
 asyncpg==0.30.0
 black==24.10.0
+certifi==2024.12.14
 cfgv==3.4.0
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 distlib==0.3.9
@@ -32,9 +34,11 @@ pydantic_core==2.27.2
 pyflakes==3.2.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
+requests==2.32.3
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.45.3
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
 virtualenv==20.29.1
