--- a/requirements.txt
+++ b/requirements.txt
@@ -9,18 +9,23 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 distlib==0.3.9
+distro==1.9.0
 fastapi==0.115.7
 filelock==3.17.0
 flake8==7.1.1
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 identify==2.6.6
 idna==3.10
+jiter==0.8.2
 Mako==1.3.8
 MarkupSafe==3.0.2
 mccabe==0.7.0
 mypy-extensions==1.0.0
 nodeenv==1.9.1
+openai==1.60.2
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
@@ -28,16 +33,19 @@ pre_commit==4.1.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pycodestyle==2.12.1
+pycryptodome==3.21.0
 pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pyflakes==3.2.0
 python-dotenv==1.0.1
+python-redsys==1.2.0
 PyYAML==6.0.2
 requests==2.32.3
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.45.3
+tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
